--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <link href="./css/index.css" rel="stylesheet">
     <link href="./css/all.css" rel="stylesheet">
-    <script src="./js/practica.js"></script>
 
     <title>Jorge Mendez</title>
 </head>
@@ -48,8 +47,8 @@
     <!-- END NAV -->
 
     <!-- PRESENTATION -->
-    <main class="container-lg container-sm">
-        <div class="row presentacion">
+    <main id="main" class="container-lg container-sm">
+        <div id="presentacion" class="row presentacion">
             <div class="col-lg-8 col-md presentacion__descrip">
                 <p class="presentacion__descrip__first">Bienvenido! Me llamo</p>
                 <h1>Jorge Mendez</h1>
@@ -156,6 +155,8 @@
     <!-- ENDS FOOTER -->
 
     <script type="text/javascript" src="./js/popper.min.js"></script>
+    <script src="./js/practica.js"></script>
+
 </body>
 
 </html>
