primer parte de proyectos section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="./css/all.css" rel="stylesheet">
@@ -52,7 +52,7 @@
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 presentation__description">
                 <div class="presentation__description__title">
                     <p><span class="typed"></span>! Me llamo</p>
-                    <div id="welcome" >
+                    <div id="welcome">
                         <p>Bienvenid<i class="presentation__description__title__welcome">o</i></p>
                         <p>Bienvenid<i class="presentation__description__title__welcome">a</i></p>
                     </div>
@@ -71,9 +71,9 @@
     <!-- END PRESENTATION -->
 
     <!-- START ABOUT ME -->
-    <section class="max-width container-aboutMe " id="about-me" >
-        <div class="row aboutMe" >
-            <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 aboutMe__information" >
+    <section class="max-width container-aboutMe " id="about-me">
+        <div class="row aboutMe">
+            <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 aboutMe__information">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-sm">
                         <h3 class="aboutMe__title">Sobre mi</h3>
@@ -84,7 +84,7 @@
                             accusantium architecto non eligendi dolorum.
                         </P>
                     </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-sm" >
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-sm">
                         <h3 class=" aboutMe__title">Hobby</h3>
                         <p class="aboutMe__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt
                             quasi repudiandae eaque aliquid at. Obcaecati cum, voluptas alias expedita ipsa ad aperiam
@@ -125,13 +125,41 @@
     </section>
     <!-- END ABOUT ME -->
     <!-- START PROJECTS -->
-    <div class="max-width container-projects" id="projects">
-        <div class="row projects">
+    <section class="max-width container-projects" id="projects">
+        <h2 class="sectionTitle">Estos son algunos de mis proyectos</h2>
+        <div class="projects">
+            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
+                <div class="projects__item__image col-sm-12 col-md-12 col-lg-6 ">
+                </div>
+                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
+                    <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
+                    <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
+                    <button>Visitar sitio</button>
+                </div>
+            </div>
 
+            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
+                <div class="projects__item__image col-sm-12 col-md-12 col-lg-6 ">
+                </div>
+                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
+                    <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
+                    <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
+                    <button>Visitar sitio</button>
+                </div>
+            </div>
+
+            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
+                <div class="projects__item__image col-sm-12 col-md-12 col-lg-6 ">
+                </div>
+                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
+                    <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
+                    <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
+                    <button>Visitar sitio</button>
+                </div>
+            </div>
+            
         </div>
-
-
-    </div>
+    </section>
     <div class="ejemplo">
 
     </div>
