--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                         <img src="./asetts/bootstrap_logo.png">
                         <p class="aboutMe__skills__container__logo__description">BOOTSTRAP</p>
                     </span>
+                    
                     <span class="aboutMe__skills__container__logo">
                         <img src="./asetts/angular_logo.png">
                         <p class="aboutMe__skills__container__logo__description">ANGULAR</p>
@@ -118,6 +119,10 @@
                     <span class="aboutMe__skills__container__logo">
                         <img src="./asetts/git_logo.png">
                         <p class="aboutMe__skills__container__logo__description">GIT</p>
+                    </span>
+                    <span class="aboutMe__skills__container__logo">
+                        <img src="./asetts/sass.png">
+                        <p class="aboutMe__skills__container__logo__description">SASS</p>
                     </span>
                 </div>
             </div>
