Agrego animaciones al texto

--- a/index.html
+++ b/index.html
@@ -18,31 +18,35 @@
 
 <body>
     <!-- NAVBAR -->
-    <header class="row header">
-        <nav class="navbar navbar-expand-sm  header__nav ">
-            <button class="navbar-toggler custom-toggler header__nav__button" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav header__nav__list">
-                    <li class="nav-item header__nav__list__item ">
-                        <a class="nav-link " href="#">Inicio <i class="fas fa-home"></i></a>
-                    </li>
-                    <li class="nav-item header__nav__list__item">
-                        <a class="nav-link" href="#about-me">Sobre mi</a>
-                    </li>
-                    <li class="nav-item header__nav__list__item">
-                        <a class="nav-link" href="#projects">Proyectos</a>
-                    </li>
-                    <li class="nav-item header__nav__list__item">
-                        <a class="nav-link" target="blank" href="./asetts/CV_MendezJorge.pdf">CV <i
-                                class="fas fa-download"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <header class="max-width header">
+        <div class="row">
+            <nav class="navbar navbar-expand-sm  header__nav ">
+                <a href="#">ASDFFF</a>
+                <button class="navbar-toggler custom-toggler header__nav__button" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav header__nav__list">
+                        <li class="nav-item header__nav__list__item ">
+                            <a class="nav-link " href="#">Inicio <i class="fas fa-home"></i></a>
+                        </li>
+                        <li class="nav-item header__nav__list__item">
+                            <a class="nav-link" href="#about-me">Sobre mi</a>
+                        </li>
+                        <li class="nav-item header__nav__list__item">
+                            <a class="nav-link" href="#projects">Proyectos</a>
+                        </li>
+                        <li class="nav-item header__nav__list__item">
+                            <a class="nav-link" target="blank" href="./asetts/CV_MendezJorge.pdf">CV <i
+                                    class="fas fa-download"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        
     </header>
     <!-- END NAV -->
 
@@ -77,7 +81,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-sm">
                         <h3 class="aboutMe__title">Sobre mi</h3>
-                        <P class="aboutMe__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur
+                        <P class="aboutMe__text animado">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur
                             earum laborum dolorem vitae placeat iste laudantium, quibusdam quidem, quia minima odit
                             omnis eum deserunt aspernatur labore dolorum nisi nesciunt? Perspiciatis, voluptate autem
                             atque sint sunt omnis dolorem soluta voluptas id perferendis consequatur ex rem maxime
@@ -86,7 +90,7 @@
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-sm">
                         <h3 class=" aboutMe__title">Hobby</h3>
-                        <p class="aboutMe__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt
+                        <p class="aboutMe__text animado">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt
                             quasi repudiandae eaque aliquid at. Obcaecati cum, voluptas alias expedita ipsa ad aperiam
                             reprehenderit earum voluptate nesciunt nam sed dolor possimus.</p>
                     </div>
