Agrego animaciones a skills

--- a/index.html
+++ b/index.html
@@ -98,33 +98,33 @@
             </div>
             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 aboutMe__skills">
                 <h3 class="aboutMe__title">Habilidades</h3>
-                <div class="aboutMe__skills__container">
-                    <span class="aboutMe__skills__container__logo">
+                <div class="aboutMe__skills__container ">
+                    <span class="aboutMe__skills__container__logo animado2">
                         <img src="./asetts/html5_logo.png">
                         <p class="aboutMe__skills__container__logo__description">HTML</p>
                     </span>
-                    <span class="aboutMe__skills__container__logo">
+                    <span class="aboutMe__skills__container__logo animado3">
                         <img src="./asetts/css_logo.png">
                         <p class="aboutMe__skills__container__logo__description">CSS</p>
                     </span>
-                    <span class="aboutMe__skills__container__logo">
+                    <span class="aboutMe__skills__container__logo animado2">
                         <img src="./asetts/javascript_logo.png">
                         <p class="aboutMe__skills__container__logo__description">JAVASCRIPT</p>
                     </span>
-                    <span class="aboutMe__skills__container__logo">
+                    <span class="aboutMe__skills__container__logo animado3">
                         <img src="./asetts/bootstrap_logo.png">
                         <p class="aboutMe__skills__container__logo__description">BOOTSTRAP</p>
                     </span>
                     
-                    <span class="aboutMe__skills__container__logo">
+                    <span class="aboutMe__skills__container__logo animado2">
                         <img src="./asetts/angular_logo.png">
                         <p class="aboutMe__skills__container__logo__description">ANGULAR</p>
                     </span>
-                    <span class="aboutMe__skills__container__logo">
+                    <span class="aboutMe__skills__container__logo animado3">
                         <img src="./asetts/git_logo.png">
                         <p class="aboutMe__skills__container__logo__description">GIT</p>
                     </span>
-                    <span class="aboutMe__skills__container__logo">
+                    <span class="aboutMe__skills__container__logo animado2">
                         <img src="./asetts/sass.png">
                         <p class="aboutMe__skills__container__logo__description">SASS</p>
                     </span>
