--- a/index.html
+++ b/index.html
@@ -143,29 +143,34 @@
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
                     <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
-                    <button>Visitar sitio</button>
+                    <a href="#" class="projects__item__description__button">
+                        <span>Ver Sitio</span>
+                    </a>
                 </div>
             </div>
-
             <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
                 <div class="projects__item__image col-sm-12 col-md-12 col-lg-6 ">
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
                     <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
-                    <button>Visitar sitio</button>
+                    <a href="#" class="projects__item__description__button">
+                        <span>Ver Sitio</span>
+                    </a>
                 </div>
             </div>
-
             <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
                 <div class="projects__item__image col-sm-12 col-md-12 col-lg-6 ">
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
                     <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
-                    <button>Visitar sitio</button>
+                    <a href="#" class="projects__item__description__button">
+                        <span>Ver Sitio</span>
+                    </a>
                 </div>
             </div>
+            
             
         </div>
     </section>
