--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
                     <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
-                    <a href="#" class="projects__item__description__button">
+                    <a href="https://jorge088.github.io/portfolio-Mendez/" target="blank" class="projects__item__description__button">
                         <span>Ver Sitio</span>
                     </a>
                 </div>
@@ -154,7 +154,7 @@
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
                     <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
-                    <a href="#" class="projects__item__description__button">
+                    <a href="https://jorge088.github.io/portfolio-Mendez/" target="blank" class="projects__item__description__button">
                         <span>Ver Sitio</span>
                     </a>
                 </div>
@@ -165,7 +165,7 @@
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
                     <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
-                    <a href="#" class="projects__item__description__button">
+                    <a href="https://jorge088.github.io/portfolio-Mendez/" target="blank" class="projects__item__description__button">
                         <span>Ver Sitio</span>
                     </a>
                 </div>
