--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="projects">
             
             <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
-                <div class="projects__item__image col-sm-12 col-md-12 col-lg-6 ">
+                <div class="projects__item__image primero col-sm-12 col-md-12 col-lg-6 ">
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Portafolio Personal</h3>
@@ -156,16 +156,16 @@
             </div>
             
             <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
-                <div class="projects__item__image col-sm-12 col-md-12 col-lg-6 ">
+                <div class="projects__item__image segundo col-sm-12 col-md-12 col-lg-6 ">
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Juego Simon DIce</h3>
                     <p class="projects__item__description__comment">Hecho como parte de un trabajo practico de la materia Programación Web. Utilicé bootstrap, sass y  Js</p>
                     <div class="projects__item__description__container">
-                        <a href="https://jorge088.github.io/portfolio-Mendez/" target="blank" class="projects__item__description__container__button">
+                        <a href="https://jorge088.github.io/JuegoSimonDice/" target="blank" class="projects__item__description__container__button">
                             <span>Ver Sitio</span>
                         </a>
-                        <a href="https://github.com/jorge088/portfolio-Mendez" target="blank" class="projects__item__description__container__button">
+                        <a href="https://github.com/jorge088/JuegoSimonDice" target="blank" class="projects__item__description__container__button">
                             <span>Ver Codigo</span>
                         </a>
                     </div>
